# spectraformer

./: .gitattribute  .gitignore  Dockerfile  GammaCheck.ipynb  INFER_AND_FIT_README.md  INSTALL.md  LRschedule_1over2.txt  Poisson check.ipynb  README.md  configs.yaml  dashboard.py  dashboard_gradio.py  data_parser_script.py  fig1.py  fig3.py  infer_and_fit_raman_map.py  inspect_results.ipynb  logbook.md  mean_var_check.py  model_comparison.ipynb  notebook.ipynb  notes.md  pmap_check.py  prng_key.ipynb  pyproject.toml  requirements.txt  sharding.ipynb  splitting.py  statistics_plots.py  todo.md  train.sbatch  train_min30.txt  train_script.py  train_script_DynMask.py  unmix.txt  unmixed_analysis.ipynb  unmixed_fitting.py  unmixed_fitting_dir.py  unmixing.py  unmixing_fitting_comprehensive.py  (+2 more)
.ipynb_checkpoints/: transformer-checkpoint.ipynb
__legacy__/: input_pipeline.py  transformer.ipynb
configs/: configs_base.yaml  configs_base2.yaml  configs_base3.yaml  configs_base4.yaml  configs_base48_GeomLoss_multidata.yaml  configs_base50_GeomLoss_multidata_highf.yaml  configs_base55_ArithmLoss_multidata_highf_LRschedule.yaml  configs_base_MSE.yaml  configs_large.yaml  configs_micro43_GeomLoss_LRSchedule_4cycles_decline0p8.yaml  configs_micro59_ArithmLoss_multidata_highf_LRschedule.yaml  configs_micro61_ArithmLoss_multidata_highf_LRschedule.yaml  configs_micro65_ArithmLoss_multidata_highf_LRschedule.yaml  configs_min.yaml  configs_min10.yaml  configs_min11.yaml  configs_min12.yaml  configs_min13.yaml  configs_min14.yaml  configs_min15.yaml  configs_min16_gamma.yaml  configs_min16_poisson1.yaml  configs_min17_gamma.yaml  configs_min18_gamma.yaml  configs_min19_gamma_0to1.yaml  configs_min2.yaml  configs_min20_gamma_0p1to1p1.yaml  configs_min21_CorrPoiss.yaml  configs_min22_MSE.yaml  configs_min23_CorrGamma.yaml  configs_min24_CorrGamma.yaml  configs_min25_CorrGamma.yaml  configs_min26_RandWindow.yaml  configs_min27_GeomLoss.yaml  configs_min28_GeomLoss_RandWindow.yaml  configs_min29_GeomLoss.yaml  configs_min3.yaml  (+46 more)
docs/: index.md  (+5 more)
(+783 files in other folders)
